--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(SOSet)
 export(SOTK)
+export(contributingCommunityGenes)
+export(getMAGs)
 export(getMVGs)
 export(importCNMF)
 export(mergeNMFObjs)
@@ -13,14 +15,32 @@ exportMethods(plotNetwork)
 exportMethods(selectRank)
 exportMethods(show)
 exportMethods(statComm)
-import(NMF)
-import(RColorBrewer)
-import(corrr)
-import(igraph)
-import(stringr)
 importFrom(EnvStats,cv)
+importFrom(NMF,basis)
+importFrom(NMF,coef)
 importFrom(NMF,compare)
 importFrom(NMF,connectivity)
 importFrom(NMF,nmfModel)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(RColorBrewer,brewer.pal.info)
+importFrom(corrr,correlate)
+importFrom(igraph,E)
+importFrom(igraph,V)
+importFrom(igraph,add.edges)
+importFrom(igraph,add.vertices)
+importFrom(igraph,add_edges)
+importFrom(igraph,as.undirected)
+importFrom(igraph,as_edgelist)
+importFrom(igraph,cluster_edge_betweenness)
+importFrom(igraph,cluster_fast_greedy)
+importFrom(igraph,cluster_leading_eigen)
+importFrom(igraph,cluster_leiden)
+importFrom(igraph,cluster_louvain)
+importFrom(igraph,cluster_walktrap)
+importFrom(igraph,components)
+importFrom(igraph,delete_vertices)
+importFrom(igraph,graph.adjacency)
+importFrom(igraph,graph.empty)
+importFrom(igraph,layout.fruchterman.reingold)
 importFrom(methods,new)
 importFrom(stringr,str_split)
